Besin oluşturm ekranı revize

--- a/CaloCalc/Properties/Resources.resx
+++ b/CaloCalc/Properties/Resources.resx
@@ -118,13 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="backround" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\backround.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="arka plan" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\arka plan.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="besin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\besin.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="son1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\son1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="arka plan" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\arka plan.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="backround" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backround.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="besin2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\besin2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
